--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "nest-csv-parser": "^2.0.4",
+    "nestjs-command": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "yargs": "^17.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
