--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.9",
     "nest-csv-parser": "^2.0.4",
     "nestjs-command": "^3.1.1",
