--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SECRET_KEY=test
 DATABASE_URI=mongodb://localhost:27017/?directConnection=true&serverSelectionTimeoutMS=2000
+LOCALSTACK_URL=http://0.0.0.0:4566
+AWS_REGION=us-east-1
+AWS_ACCOUNT_ID=000000000000
