--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@ssut/nestjs-sqs": "^1.2.0",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1112.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
